Added user profile picture on the top. Login process works find security process needed - token generator “Login” link has two functionality —> Sign up and sign in no duplicate user on database able to save video urls Logout process seems fine but need to check. Added Save button next to every video.

--- a/MERN_Project/server/.env
+++ b/MERN_Project/server/.env
@@ -1,6 +1,6 @@
 
 MONGO_URI=mongodb+srv://sksk7799:Rladbcks12@cluster411.4ut0bzc.mongodb.net/?retryWrites=true&w=majority
-OPENWEATHER_API_KEY = 863a06fa7417c028c70fe15f49f1f92e
+YOUTUBE_API_KEY =AIzaSyCVBslsijI1uZRgKpKpZExs52iT1MlzK_8
 
 CLIENT_ID=732544123379-o6vudjeleeu1kk2ujl2kvkukk79ts7jn.apps.googleusercontent.com
 CLIENT_SECRET=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
